Dependencies section updated to v0.3.0. First steps document overhauled.

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -1,211 +1,203 @@
-<p></p>
-
-<table border="0" cellpadding="15" cellspacing="0" style=
-"text-align: left; width: 100%; margin-left: auto; margin-right: auto;">
-    <tbody>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html;
+      charset=ISO-8859-1">
+  </head>
+  <body>
+    <p></p>
+    <table style="text-align: left; width: 100%; margin-left: auto;
+      margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
+      <tbody>
         <tr>
-            <th style=
-            "vertical-align: top; background-color: white; width: 102px;">
-            About<br></th>
-
-            <td style="vertical-align: top;">
-                Pyspread is a non-traditional spreadsheet application that is
-                based on and written in the programming language <a href=
-                "http://www.python.org/">Python</a>.<br>
-                <br>
-                The goal of pyspread is to be the most pythonic
-                spreadsheet.<br>
-                <br>
-                Pyspread expects Python expressions in its grid cells, which
-                makes a spreadsheet specific language obsolete. Each cell
-                returns a Python object that can be accessed from other cells.
-                These objects can represent anything including lists or
-                matrices.<br>
-                <br>
-                Pyspread is free software. It is released under the <a href=
-                "http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="width: 211px;">
-                <a href="images/screenshot_main_window_0.2.0.png"><img alt=
-                "Pyspread main window" src=
-                "images/screenshot_main_window_0.2.0_preview.png" style=
-                "border: 0px solid ; width: 200px; height: 154px;"></a><br>
-            </td>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;"> About<br>
+          </th>
+          <td style="vertical-align: top;"> Pyspread is a
+            non-traditional spreadsheet application that is based on and
+            written in the programming language <a
+              href="http://www.python.org/">Python</a>.<br>
+            <br>
+            The goal of pyspread is to be the most pythonic spreadsheet.<br>
+            <br>
+            Pyspread expects Python expressions in its grid cells, which
+            makes a spreadsheet specific language obsolete. Each cell
+            returns a Python object that can be accessed from other
+            cells. These objects can represent anything including lists
+            or matrices.<br>
+            <br>
+            Pyspread is free software. It is released under the <a
+              href="http://www.gnu.org/copyleft/gpl.html">GPL v3</a>.<br>
+          </td>
+          <td style="vertical-align: top;"><br>
+          </td>
+          <td style="width: 211px;"> <a
+              href="images/screenshot_main_window_0.2.0.png"><img
+                alt="Pyspread main window"
+                src="images/screenshot_main_window_0.2.0_preview.png"
+                style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
+          </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top; width: 102px;">Features<br></th>
-
-            <td style="vertical-align: top;">
-                <ul style="text-align: left;">
-                    <li>CSV import and export</li>
-                    <li>Chart creation dialog based on <a href="http://matplotlib.org/">
-                        matplotlib</a>
-                    <li>Python objects as cell results</li>
-                    <li>Python macros</li>
-                    <li>GPG based save file signatures for preventing foreign code
-                    execution<br></li>
-
-                    <li>Access to all Python modules from within cells.
-                        These modules allow for example matrix operations via <a href="http://www.numpy.org/">
-                        numpy</a> or fixed point decimal numbers for business calculations via <a href="http://docs.python.org/library/decimal.html">
-                        decimal</a>.
-                </ul>
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="width: 211px;">
-                <a href="images/screenshot_sinus_large.png"><img alt=
-                "Pyspread screenshot" src="images/screenshot_sinus_thumb.png"
-                style=
-                "border: 0px solid ; width: 200px; height: 173px;"></a><br>
-                <a href="images/screenshot_fonts.png"><br></a>
-            </td>
+          <th style="vertical-align: top; width: 102px;">Features<br>
+          </th>
+          <td style="vertical-align: top;">
+            <ul style="text-align: left;">
+              <li>CSV import and export</li>
+              <li>Chart creation dialog based on <a
+                  href="http://matplotlib.org/"> matplotlib</a> </li>
+              <li>Python objects as cell results</li>
+              <li>Python macros</li>
+              <li>GPG based save file signatures for preventing foreign
+                code execution<br>
+              </li>
+              <li>Access to all Python modules from within cells. These
+                modules allow for example matrix operations via <a
+                  href="http://www.numpy.org/"> numpy</a> or fixed point
+                decimal numbers for business calculations via <a
+                  href="http://docs.python.org/library/decimal.html">
+                  decimal</a>. </li>
+            </ul>
+          </td>
+          <td style="vertical-align: top;"><br>
+          </td>
+          <td style="width: 211px;"> <a
+              href="images/screenshot_sinus_large.png"><img
+                alt="Pyspread screenshot"
+                src="images/screenshot_sinus_thumb.png" style="border:
+                0px solid ; width: 200px; height: 173px;"></a><br>
+            <a href="images/screenshot_fonts.png"><br>
+            </a> </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top;">news<br></th>
-
-            <td style="vertical-align: top; text-align: left;">
-
-                March 2014: Andreas Noteng has provided a 
-		<a href="https://packages.debian.org/sid/pyspread">deb package</a>
-		for installing pyspread 0.2.6 on Debian Linux. The package can
-		also be found in the Debian testing repository.
-                <p><br>
-		February 2014: Dimitris Zlatanidis has provided a 
-		<a href="http://slackbuilds.org/repository/14.1/office/pyspread/">
-		SlackBuild</a>
-		for installing pyspread on <a href="http://www.slackware.com/">Slackware Linux 14.1</a>.
-                <p><br>
-                February 2014: Pyspread 0.2.7 is out. Get it <a href=
-                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">
-                here</a>. This is a bug fix release for the chart dialog on Windows systems.
-                <p><br>
-                February 2014: Pyspread 0.2.6 is out. Get it <a href=
-                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">
-                here</a>.
-                <div style="margin-left: 40px;">
-                    <br>
-                    New features:<br>
-
-                    <ul>
-
-                        <li>Reading support for Excel xls files (requires dependency xlrd)</li>
-
-                        <li>Code execution timeout, i. e. buggy code such as infinite loops does
-			    not lock up pyspread any more.
-			    Note: The timeout does not work for long running C operations<br></li>
-
-                        <li>Macro dialog now provides an error message field<br></li>
-
-                        <li>Contour plots and Sankey charts added to chart dialog<br></li>
-
-                        <li>Chart dialog further improved<br></li>
-
-                        <li>Example macro for in cell LaTeX equations added<br></li>
-                    </ul>
-                </div>
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="width: 211px;">
-                <a href="images/screenshot_basemap_large.png"><img alt=
-                "Pyspread screenshot" src="images/screenshot_basemap_thumb.png"
-                style=
-                "border: 0px solid ; width: 200px; height: 173px;"></a><br>
-                <a href="images/screenshot_fonts.png"><br></a>
-            </td>
+          <th style="vertical-align: top;">news<br>
+          </th>
+          <td style="vertical-align: top; text-align: left;"> March
+            2014: Andreas Noteng has provided a <a
+              href="https://packages.debian.org/sid/pyspread">deb
+              package</a> for installing pyspread 0.2.6 on Debian Linux.
+            The package can also be found in the Debian testing
+            repository.
+            <p><br>
+              February 2014: Dimitris Zlatanidis has provided a <a
+                href="http://slackbuilds.org/repository/14.1/office/pyspread/">
+                SlackBuild</a> for installing pyspread on <a
+                href="http://www.slackware.com/">Slackware Linux 14.1</a>.
+            </p>
+            <p><br>
+              February 2014: Pyspread 0.2.7 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">
+                here</a>. This is a bug fix release for the chart dialog
+              on Windows systems. </p>
+            <p><br>
+              February 2014: Pyspread 0.2.6 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">
+                here</a>. </p>
+            <div style="margin-left: 40px;"> <br>
+              New features:<br>
+              <ul>
+                <li>Reading support for Excel<sup>&reg;</sup> xls files
+                  (requires dependency xlrd)</li>
+                <li>Code execution timeout, i. e. buggy code such as
+                  infinite loops does not lock up pyspread any more.
+                  Note: The timeout does not work for long running C
+                  operations<br>
+                </li>
+                <li>Macro dialog now provides an error message field<br>
+                </li>
+                <li>Contour plots and Sankey charts added to chart
+                  dialog<br>
+                </li>
+                <li>Chart dialog further improved<br>
+                </li>
+                <li>Example macro for in cell LaTeX equations added<br>
+                </li>
+              </ul>
+            </div>
+          </td>
+          <td style="vertical-align: top;"><br>
+          </td>
+          <td style="width: 211px;"> <a
+              href="images/screenshot_basemap_large.png"><img
+                alt="Pyspread screenshot"
+                src="images/screenshot_basemap_thumb.png" style="border:
+                0px solid ; width: 200px; height: 173px;"></a><br>
+            <a href="images/screenshot_fonts.png"><br>
+            </a> </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top; width: 102px;">
-            Requirements<br></th>
-
-            <td style="vertical-align: top;">
-                Pyspread is designed for Linux and other GTK platforms.<br>
-                <br>
-                Windows™ is supported starting with version 0.2.4.
-                <p><br>
-                <span style=
-                "text-decoration: underline;">Dependencies</span><br>
-
-                <ul>
-                    <li>
-                        <a href="http://www.python.org/">Python</a> (&gt;=2.7,
-                        &lt;3.0)
-                    </li>
-
-                    <li>
-                        <a href="http://www.numpy.org/">numpy</a> (&gt;=1.1.0)
-                    </li>
-
-                    <li>
-                        <a href="http://www.wxpython.org/">wxPython</a>
-                        (&gt;=2.8.10.1, &lt;2.9, Unicode version required)
-                    </li>
-
-                    <li>
-                        <a href="http://matplotlib.org/">matplotlib</a>
-                        (&gt;=1.1.1)<br>
-                    </li>
-
-                    <li>
-                        <a href=
-                        "http://code.google.com/p/python-gnupg/">python-gnupg</a>
-                        (&gt;=0.3.0)<br>
-                    </li>
-                    <li>
-                        <a href=
-                        "http://www.python-excel.org/">xlrd (optional for opening Excel files)</a>
-                        (&gt;=0.9.2)<br>
-                    </li>
-                </ul>
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td style="width: 211px;">
-                <a href="images/screenshot_wagner_large.png"><img alt=
-                "Pyspread screenshot" src="images/screenshot_wagner_thumb.png"
-                style="border: 0px solid ; width: 200px; height: 144px;"></a>
-            </td>
+          <th style="vertical-align: top; width: 102px;"> Requirements<br>
+          </th>
+          <td style="vertical-align: top;"> Pyspread is designed for
+            Linux and other GTK platforms. Windows<sup>&reg;</sup> is
+            supported starting with version 0.2.4.
+            <p><br>
+              <span style="text-decoration: underline;">Dependencies</span><br>
+            </p>
+            <ul>
+              <li> <a href="http://www.python.org/">Python</a>
+                (&gt;=2.7, &lt;3.0) </li>
+              <li> <a href="http://www.numpy.org/">numpy</a>
+                (&gt;=1.1.0) </li>
+              <li> <a href="http://www.wxpython.org/">wxPython</a>
+                (&gt;=2.8.10.1, &lt;2.9, Unicode version required) </li>
+              <li> <a href="http://matplotlib.org/">matplotlib</a>
+                (&gt;=1.1.1)</li>
+            </ul>
+            <span style="text-decoration: underline;">Optional
+              dependencies</span>
+            <ul>
+              <li> <a href="http://code.google.com/p/python-gnupg/">python-gnupg</a>
+                (&gt;=0.3.0, for opening own files without approval) <br>
+              </li>
+              <li> <a href="http://www.python-excel.org/">xlrd</a>
+                (&gt;=0.9.2, for loading Excel<sup>&reg;</sup> files)</li>
+              <li><a href="http://www.python-excel.org/">xlwt</a>
+                (&gt;=0.9.2, for saving Excel files, pyspread
+                &gt;=v0.3.0 required)</li>
+              <li><a href="http://jedi.jedidjah.ch">jedi</a>
+                (&gt;=0.8.0, for tab completion and context help in the
+                entry line, pyspread &gt;=v0.3.0 required)<br>
+              </li>
+            </ul>
+          </td>
+          <td style="vertical-align: top;"><br>
+          </td>
+          <td style="width: 211px;"> <a
+              href="images/screenshot_wagner_large.png"><img
+                alt="Pyspread screenshot"
+                src="images/screenshot_wagner_thumb.png" style="border:
+                0px solid ; width: 200px; height: 144px;"></a> </td>
         </tr>
-
         <tr>
-            <th style="vertical-align: top;">contact<br></th>
-
-            <td style="vertical-align: top;">
-                For user questions or feedback please post to the
-                pyspread-users mailing list by sending an e-mail to <a href=
-                "mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>. You
-                can <a href=
-                "https://mail.gna.org/listinfo/pyspread-users/">here</a>
-                subscribe to the list.<br>
-                <br>
-                For contributions, patches, development discussions and ideas
-                please post to the pyspread-dev mailing list by sending an
-                e-mail to <a href=
-                "mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>. You can
-                <a href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
-                subscribe to the list.
-            </td>
-
-            <td style="vertical-align: top;"><br></td>
-
-            <td><br></td>
+          <th style="vertical-align: top;">contact<br>
+          </th>
+          <td style="vertical-align: top;"> For user questions or
+            feedback please post to the pyspread-users mailing list by
+            sending an e-mail to <a
+              href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>.
+            You can <a
+              href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
+            subscribe to the list.<br>
+            <br>
+            For contributions, patches, development discussions and
+            ideas please post to the pyspread-dev mailing list by
+            sending an e-mail to <a href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>.
+            You can <a
+              href="https://mail.gna.org/listinfo/pyspread-dev/">here</a>
+            subscribe to the list. </td>
+          <td style="vertical-align: top;"><br>
+          </td>
+          <td><br>
+          </td>
         </tr>
-    </tbody>
-</table>
-
-<p></p>
-
-<p><span style="font-style: italic;">Copyright Martin Manns<br>
-Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
-"font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-23. March 2014</span></p>
+      </tbody>
+    </table>
+    <p></p>
+    <p><span style="font-style: italic;">Copyright Martin Manns<br>
+        Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+          style="font-style: italic;">
+      </span> <span style="font-style: italic;">Last changed: 29. June
+        2014</span></p>
+  </body>
+</html>
