--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -72,8 +72,38 @@
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;"> March
-            2014: Andreas Noteng has provided a <a
+          <td style="vertical-align: top; text-align: left;"> February
+            2014: Pyspread 0.3.0 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">
+              here</a>.
+            <p></p>
+            <div style="margin-left: 40px;"> <br>
+              New features:<br>
+              <ul>
+                <li>wxPython 3.x support</li>
+                <li>Entryline text completion (use &lt;Tab&gt;)</li>
+                <li>EntryLine tooltip now displays docstrings for
+                  methods and builtins (use &lt;Tab&gt;)</li>
+                <li>nn function added to remove None from result array</li>
+                <li>Uncompressed pysu save file format </li>
+                <li>Writing xls files (still experimental)</li>
+                <li>Cell locking</li>
+                <li>Cell sorting</li>
+                <li>Frozen cells can now be updated periodically
+                  (&gt;=100 ms/update)</li>
+                <li>Reference to a selection can now be copied the the
+                  clipboard with &lt;Ctrl&gt; + R</li>
+                <li>&lt;Home&gt; now moves the active cell to the first
+                  column of the actual row</li>
+                <li>&lt;Shift&gt; + &lt;Space&gt; now selects the
+                  current row</li>
+                <li>&lt;Ctrl&gt; + &lt;Space&gt; now selects the current
+                  column</li>
+                <li>Fingerprint in gpg key choice dialog</li>
+                <li>Tooltips for toolbar icons</li>
+              </ul>
+            </div>
+            March 2014: Andreas Noteng has provided a <a
               href="https://packages.debian.org/sid/pyspread">deb
               package</a> for installing pyspread 0.2.6 on Debian Linux.
             The package can also be found in the Debian testing
@@ -140,7 +170,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
               <li> <a href="http://www.numpy.org/">numpy</a>
                 (&gt;=1.1.0) </li>
               <li> <a href="http://www.wxpython.org/">wxPython</a>
-                (&gt;=2.8.10.1, &lt;2.9, Unicode version required) </li>
+                (&gt;=2.8.10.1, Unicode version required) </li>
               <li> <a href="http://matplotlib.org/">matplotlib</a>
                 (&gt;=1.1.1)</li>
             </ul>
@@ -157,7 +187,9 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
                 &gt;=v0.3.0 required)</li>
               <li><a href="http://jedi.jedidjah.ch">jedi</a>
                 (&gt;=0.8.0, for tab completion and context help in the
-                entry line, pyspread &gt;=v0.3.0 required)<br>
+                entry line, pyspread &gt;=v0.3.0 required)</li>
+              <li><a href="http://matplotlib.org/basemap/">basemap</a>
+                (&gt;=1.0.7, for the weather example pys file)<br>
               </li>
             </ul>
           </td>
@@ -197,7 +229,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 29. June
+      </span> <span style="font-style: italic;">Last changed: 09. July
         2014</span></p>
   </body>
 </html>
