Pages made html compliant

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -2,38 +2,51 @@
       margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
         <tr>
-          <th style="vertical-align: top; background-color: white; width: 102px;"> latest<br>
+          <th style="vertical-align: top; background-color: white;
+            width: 102px;"> latest<br>
           </th>
           <td style="vertical-align: top;"> <a
-              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">version
-              0.2.7</a> </td>
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">version
+
+              0.3.0</a> </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
-          <td style="vertical-align: top;">
+          <td style="vertical-align: top;"> <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">version
+
+              0.2.7</a><br>
             <a
-              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">version
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">version
+
               0.2.6</a><br>
             <a
-              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">version
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">version
+
               0.2.5</a><br>
             <a
-              href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
+
               0.2.4</a><br>
             <a
-              href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
+href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
+
               0.2.3</a> (Windows incompatible)<br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
+
               0.2.2</a> (Windows incompatible)<br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
+
               0.2.1</a> (Windows incompatible)<br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
+
               0.2.0</a> (Windows incompatible)<br>
             <a
               href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
+
               0.1.2</a><br>
           </td>
         </tr>
@@ -78,8 +91,8 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                   python setup.py install</tt><br>
                 <br>
               </li>
-              <li>Windows: Replace <i>python</i> with your
-                Python interpreter (absolute path)<br>
+              <li>Windows: Replace <i>python</i> with your Python
+                interpreter (absolute path)<br>
                 <br>
               </li>
               <li>Become normal user again<br>
@@ -149,6 +162,7 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
               </li>
               <li>Download and install <a
                   href="http://www.wxpython.org/download.php#stable">wxPython
+
                   2.8.x</a>.<br>
                 <br>
               </li>
@@ -168,22 +182,30 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 For <span style="font-weight: bold;">64 bit systems</span>,
                 the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
                 to be extracted (e. g. with 7zip) and installed as
-                follows:<br> <br>
+                follows:<br>
+                <br>
               </li>
-                <li>Log in as Administrator<br> <br>
-                </li>
-                <li>Start cmd <br> <br></li>
-                <li>cd to the extraction directory <br> <br></li>
-                <li>Type in <br>
-                  <tt>python setup.py install
-                    <br> <br>
-                  </tt></li>
+              <li>Log in as Administrator<br>
+                <br>
+              </li>
+              <li>Start cmd <br>
+                <br>
+              </li>
+              <li>cd to the extraction directory <br>
+                <br>
+              </li>
+              <li>Type in <br>
+                <tt>python setup.py install <br>
+                  <br>
+                </tt></li>
               <li>Download and extract the pyspread tarball (e. g. with
                 7zip)<br>
-                <br> <br>
+                <br>
+                <br>
               </li>
               <li>Start pyspread by double-clicking on the file
-                pyspread.bat in the extraction directory<br> <br>
+                pyspread.bat in the extraction directory<br>
+                <br>
               </li>
             </ol>
           </td>
@@ -194,5 +216,5 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 05. February
-        2014</span></p>
+      </span> <span style="font-style: italic;">Last changed: 05.
+        February 2014</span></p>
