Web site updated for new release 0.3.1

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -6,13 +6,18 @@
             width: 102px;"> latest<br>
           </th>
           <td style="vertical-align: top;"> <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">version
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.1.tar.gz#md5=45158e467143fcd4328866af7c8cdcdc">version
 
-              0.3.0</a> </td>
+              0.3.1</a> </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
-          <td style="vertical-align: top;"> <a
+          <td style="vertical-align: top;"> 
+            <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">version
+
+              0.3.0<br>
+            <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">version
 
               0.2.7</a><br>
@@ -216,5 +221,5 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 09.
+      </span> <span style="font-style: italic;">Last changed: 12.
         July 2014</span></p>
