--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -65,6 +65,18 @@
           <th style="vertical-align: top;">news<br>
           </th>
           <td style="vertical-align: top; text-align: left;"> February
+            2014: Pyspread 0.3.1 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.1.tar.gz#md5=45158e467143fcd4328866af7c8cdcdc">
+              here</a>.
+            <p></p>
+            <div style="margin-left: 40px;"> <br>
+              Bugfix release:<br>
+              <ul>
+                <li>Removes a warning</li>
+                <li>Updated German and Ukrainian translations</li>
+              </ul>
+            </div>
+          <td style="vertical-align: top; text-align: left;"> February
             2014: Pyspread 0.3.0 is out. Get it <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">
               here</a>.
@@ -221,5 +233,5 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 09. July
+      </span> <span style="font-style: italic;">Last changed: 12. July
         2014</span></p>
