Web site updated for v0.3.2

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -64,8 +64,22 @@
         <tr>
           <th style="vertical-align: top;">news<br>
           </th>
-          <td style="vertical-align: top; text-align: left;"> February
-            2014: Pyspread 0.3.1 is out. Get it <a
+          <td style="vertical-align: top; text-align: left;">
+
+            July 2014: Pyspread 0.3.2 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.2.tar.gz#md5=7040fb44b560235fa3336bd14679b1c3">
+              here</a>.
+            <p></p>
+            <div style="margin-left: 40px;"> <br>
+              Bugfix release:<br>
+              <ul>
+                <li>Saving files that exist now succeeds in Windows</li>
+                <li>Result text is now wrapped to cell extent</li>
+                <li>Brasilian Portugese translations updated</li>
+              </ul>
+            </div>
+
+            July 2014: Pyspread 0.3.1 is out. Get it <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.1.tar.gz#md5=45158e467143fcd4328866af7c8cdcdc">
               here</a>.
             <p></p>
@@ -77,7 +91,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.1.tar.gz#m
               </ul>
             </div>
 
-          February 2014: Pyspread 0.3.0 is out. Get it <a
+          July 2014: Pyspread 0.3.0 is out. Get it <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">
               here</a>.
             <div style="margin-left: 40px;"> <br>
@@ -232,5 +246,5 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 12. July
+      </span> <span style="font-style: italic;">Last changed: 21. July
         2014</span></p>
