Main page now relects v0.3.3, dates on pages updated

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -66,6 +66,17 @@
           </th>
           <td style="vertical-align: top; text-align: left;">
 
+            September 2014: Pyspread 0.3.3 is out. Get it <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.3.tar.gz#md5=f15d309de30c899ac5914b2e50d24b28">
+              here</a>.
+            <p></p>
+            <div style="margin-left: 40px;"> <br>
+              Bugfix release:<br>
+              <ul>
+                <li>Initaial GPG key selection now works when using wxPython 3.x</li>
+              </ul>
+            </div>
+
             July 2014: Pyspread 0.3.2 is out. Get it <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.2.tar.gz#md5=7040fb44b560235fa3336bd14679b1c3">
               here</a>.
@@ -246,5 +257,5 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#m
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 21. July
+      </span> <span style="font-style: italic;">Last changed: 09. September
         2014</span></p>
